Se redondea el valor de la cuota mensual a 2 digitos.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Créditos en línea</h1>
         <hr>
+        <h2>Tasa del 2% TNM</h2>
 
         <script src="functions.js"></script>
     </body>
