--- a/index.html
+++ b/index.html
@@ -4,13 +4,118 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Créditos</title>
+		<meta name="description" content="Web para créditos en línea a las mejores tasas del mercado">
+		<meta name="keywords" content="créditos, ofertas, intereses bajos, servicio, microcréditos">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<title>Créditos</title>
+		<link rel="shortcut icon" href="./assets/img/favicon-32x21.png">
+		<link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <h1>Créditos en línea</h1>
-        <hr>
-        <h2>Tasa del 2% TNM</h2>
+		<div class="titulo">
+			<h1>CrediApp</h1>
+        	<h2>Créditos en línea</h2>
+			<h4>Tasa del 2% TNM</h4>
+		</div>
 
-        <script src="functions.js"></script>
+        <main class="contenido">
+			<section class="menu">
+				<!--button type="button" class="btn btn-primary" onclick="adicionarPrest()">Crear Nuevo Crédito</!--button>
+				<button type="button" class="btn btn-primary" onclick="adicionarPrest()">Ver Listado de Créditos</button>
+				<button-- type="button" class="btn btn-primary" onclick="adicionarPrest()">Buscar Crédito</button-->
+
+				<div class="card" id="newCredit">
+					<img src="./assets/img/New-Credit.svg" alt="Nuevo Crédito" onclick="mostrarNuevoCredito()">
+					<div class="intro">
+						<h4>Nuevo Crédito</h4>
+					</div>
+				</div>
+
+				<div class="card" id="creditList">
+					<img src="./assets/img/Credit-List.svg" alt="Listado de Créditos" onclick="mostrarListaCreditos()">
+					<div class="intro">
+						<h4>Listado de Créditos</h4>
+					</div>
+				</div>
+
+				<div class="card" id="searchCredit">
+					<img src="./assets/img/Search-Credit.svg" alt="Buscar Crédito"  onclick="buscarCredito()">
+					<div class="intro">
+						<h4>Buscar Crédito</h4>
+					</div>
+				</div>
+				
+			</section>
+
+			<section class="nuevoCred" id="nuevoCred">
+				<form action="#" id="frmPrestamos">
+					<div id="nuevoPrest">
+						<h4>Nuevo Crédito</h4>
+						<div class="row">
+							<div class="col-12 col-sm-4 mb-3">
+								<label for="cedula" class="form-label">Cédula</label>
+								<input type="number" name="cedula" class="form-control" id="cedula" placeholder="Digita la cédula" required>
+							</div>
+							<div class="col-12 col-sm-8 mb-3">
+								<label for="nombre" class="form-label">Nombre</label>
+								<input type="text" name="nombre" class="form-control" id="nombre" placeholder="Digita el nombre" required>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-12 col-sm-8 mb-3">
+								<label for="vlrCred" class="form-label">Vlr. del Préstamo</label>
+								<input type="number" name="vlrCred" class="form-control" id="vlrCred" placeholder="Digita el valor del préstamo" required>
+							</div>
+							<div class="col-12 col-sm-4 mb-3">
+								<label for="numCuotas" class="form-label">No. de Cuotas</label>
+								<input type="number" name="numCuotas" class="form-control" id="numCuotas" placeholder="Digita las cuotas" required>
+							</div>
+						</div>
+						<button type="button" class="btn btn-primary" onclick="adicionarPrest()">Adicionar</button>
+					</div>
+				</form>
+
+			</section>
+
+			<section class="listaCred" id="listaCred">
+				<table class="table table-success table-striped datosCred" name="tblPrest">
+					<thead>
+						<tr>
+							<th scope="col">#</th>
+							<th scope="col">Cédula</th>
+							<th scope="col">Nombre</th>
+							<th scope="col">Vlr. Solicitado</th>
+							<th scope="col">No. Cuotas</th>
+							<th scope="col">Tasa</th>
+							<th scope="col">Vlr. Cuota</th>
+							<th scope="col">Vlr. Intereses</th>
+							<th scope="col">Total Crédito</th>
+							<th scope="col">Fecha</th>
+						</tr>
+					</thead>
+					<tbody id="bodyPrest">
+					</tbody>
+				</table>
+
+				<table class="table table-success table-striped datosTotal" name="tblResumen">
+					<thead>
+						<tr>
+							<th scope="col"  colspan="8"></th>
+							<th scope="col">Resumen Créditos</th>
+							<th scope="col"></th>
+						</tr>
+					</thead>
+					<tbody id="bodyResumen">
+					</tbody>
+				</table>
+			</section>
+		</main>
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script src="./functions.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </body>
 </html>
